[project]
name = "acme-nginx"
version = "0.4.2"
# TODO: Use dynamic versioning when uv supports it
# dynamic = ["version"]
description = "Python library/program to create LetsEncrypt SSL certificates"
readme = "README.md"
authors = [{ name = "Konstantin Shcherban", email = "insider@sudoers.dev"}]
license = "GPL-3.0"
requires-python = ">=3.9.2,<3.14"
dependencies = [
    "boto3 ~= 1.34",
    "cryptography ~= 45.0"
]

[project.urls]
homepage = "https://github.com/kshcherban/acme-nginx"
repository = "https://github.com/kshcherban/acme-nginx"

[project.scripts]
acme-nginx = "acme_nginx.client:main"

[project.optional-dependencies]
dev = [
    # "setuptools>=60"
]
test = [
    "pytest~=8.3"
]

[build-system]
requires = ["uv_build>=0.7.8,<0.8.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
